--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "json-server": "^0.16.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-icons": "^3.9.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "styled-components": "^5.0.1"
@@ -17,7 +18,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "jsonDB": "json-server -w db.json -p 3001"
   },
   "eslintConfig": {
     "extends": "react-app"
